[gd_scene load_steps=2 format=3 uid="uid://cn1blgqopnkmy"]

[ext_resource type="Script" path="res://addons/jam_launch/ui/MessagePanel.gd" id="1_vyu1k"]

[node name="MessagePanel" type="MarginContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_vyu1k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 4

[node name="HB" type="HBoxContainer" parent="MC"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Message" type="RichTextLabel" parent="MC/HB"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "Message in the message panel"
fit_content = true
scroll_active = false

[node name="ShowAll" type="Button" parent="MC/HB"]
visible = false
layout_mode = 2
text = "Show All"

[node name="VB" type="VBoxContainer" parent="MC/HB"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Dismiss" type="Button" parent="MC/HB/VB"]
layout_mode = 2
text = "Dismiss"

[node name="ProgressBar" type="ProgressBar" parent="MC/HB/VB"]
visible = false
layout_mode = 2
size_flags_vertical = 4
value = 50.0
show_percentage = false

[node name="DismissTimer" type="Timer" parent="."]
one_shot = true

[node name="Full" type="Popup" parent="."]
title = "Full Message"
size = Vector2i(100, 230)

[node name="M" type="MarginContainer" parent="Full"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="FullMessage" type="RichTextLabel" parent="Full/M"]
layout_mode = 2
bbcode_enabled = true
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"

[connection signal="pressed" from="MC/HB/ShowAll" to="." method="_on_show_all_pressed"]
[connection signal="pressed" from="MC/HB/VB/Dismiss" to="." method="_on_dismiss_pressed"]
[connection signal="timeout" from="DismissTimer" to="." method="_on_dismiss_timer_timeout"]
